--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <link type="stylesheet" rel="text/css" href="style.css">
+    <link type="stylesheet" rel="text/css" href="assets/style.css">
     <title>Homepage</title>
 </head>
 
@@ -41,7 +41,7 @@
                 </div>
                 <div class="row">
                   <div class="col-md-3">
-                    <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
+                    <img src="assets/slack pic.jpg" alt="Placeholder" class="img-thumbnail">
                   </div>
                   <div class="col-md-9">
                     <p>
