--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
-        <a class="navbar-brand" href="#">Tyler Mathews</a>
+        <a class="navbar-brand" href="index.html">Tyler Mathews</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -41,15 +41,21 @@
                 </div>
                 <div class="row">
                   <div class="col-md-3">
-                    <img src="assets/slack pic.jpg" alt="Placeholder" class="img-thumbnail">
+                    <img src="assets/slack pic.jpg" alt="profilePic" class="img-thumbnail">
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-md-6">
                     <p>
                       My name is Tyler Mathews, I was born in January of 1990 and currently reside in Fraser, Colorado. I currently work as a patroller at Winter Park but decided to take the summer off to focus on this new career opportunity.
                       I was born and raised in Marietta, Georgia (a suburb of Atlanta) and graduated from Kennesaw State University with a bachelors in history. I also played lacrosse through college and continue to coach at the high school level
                       here in Fraser. In my freetime, sometimes it is hard to decdicate time to one hobby. I enjoy the outdoors so skiing, fishing, biking and hutning are at the top of the list but I also enjoy writing and playing music on string instruments
                       and cranking up the Playstation for a chunk of time. Coding is quickly becoming another passion of mine that I lookforward to dedicating time to. 
                     </p>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="card" style="width: 10rem;">
+                        <a href= "https://www.instagram.com/tbmtrout/?hl=en">
+                        <img class="card-img-top" src="assets/gram.png" alt="Card image cap"></a>
+                    </div>
                   </div>
                 </div>
               </div>
