hate the homepage, subrow somewhere

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,18 +41,20 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
+                    <a href="https://mcla.us/player/28167/tyler_mathews.html">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <img class="card-img-top" src="assets/ksuowl.jpg" alt="KSU owl"></a>
                         <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <p class="card-text">Lacrosse things.</p>
                         </div>
                     </div>
                 </div>
                 <div  class="col-md-6">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <a href="https://www.winterparkresort.com/">
+                        <img class="card-img-top" src="assets/snow.jpg" alt="WPsnow"></a>
                         <div class="card-body">
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <p class="card-text">No projects yet but here the resort in Winter.</p>
                         </div>
                     </div>
                 </div>
@@ -61,17 +63,19 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <a href="https://www.winterparkresort.com/">
+                        <img class="card-img-top" src="assets/winterpark.jpg" alt="Winter Park"></a>
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Yeah no projects but here is Winter Park again.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <a href="https://www.winterparkresort.com/">
+                        <img class="card-img-top" src="assets/wpsummer.jpg" alt="wpsummer"></a>
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Here is Winter Park in the summer.</p>
                         </div>
                     </div>
                 </div>
@@ -80,17 +84,19 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <a href="https://www.winterparkresort.com/">
+                        <img class="card-img-top" src="assets/wpsunset.jpg" alt="sunset"></a>
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text"> Here is a cool sunset in... Winter Park.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <a href="https://www.instagram.com/tbmtrout/">
+                        <img class="card-img-top" src="assets/browntown.jpg" alt="fish"></a>
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">A fat browntrout</p>
                         </div>
                     </div>
                 </div>
