added the footer, still cant find the subrow on homeopage

--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
             </div>
         </div>
       </section>
+      
+      <div class="container">
+        <div class="row">
+          <div class="span12">
+            <div id="footer">
+              <ul class="footer">
+                <li>Website built by <a href="contact.html">Tyler Mathews</a></li>&nbsp;&nbsp;
+                <li>Email:mrmathews08@gmail.com</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     
 </body>
 </html>
