--- a/portfolio.html
+++ b/portfolio.html
@@ -101,9 +101,23 @@
                     </div>
                 </div>
             </div>
-
-        </div>
+         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div id="footer">
+                  <ul class="footer">
+                    <li>Website built by <a href="contact.html">Tyler Mathews</a></li>&nbsp;&nbsp;
+                    <li>Email:mrmathews08@gmail.com</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+    </footer>
     
 </body>
 </html>
