--- a/contact.html
+++ b/contact.html
@@ -86,5 +86,18 @@
             </form>
         </div>
     </main>
+
+    <div class="container">
+        <div class="row">
+          <div class="span12">
+            <div id="footer">
+              <ul class="footer">
+                <li>Website built by <a href="contact.html">Tyler Mathews</a></li>&nbsp;&nbsp;
+                <li>Email:mrmathews08@gmail.com</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
