fixed spelling errors, where is that subrow

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                         <a href="https://www.winterparkresort.com/">
                         <img class="card-img-top" src="assets/snow.jpg" alt="WPsnow"></a>
                         <div class="card-body">
-                          <p class="card-text">No projects yet but here the resort in Winter.</p>
+                          <p class="card-text">No projects yet but here is the resort in Winter.</p>
                         </div>
                     </div>
                 </div>
@@ -84,10 +84,10 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card" style="width: 18rem;">
-                        <a href="https://www.winterparkresort.com/">
-                        <img class="card-img-top" src="assets/wpsunset.jpg" alt="sunset"></a>
+                        <a href="https://github.com/mrmathews08">
+                        <img class="card-img-top" src="assets/githublogo.jog.png" alt="github"></a>
                         <div class="card-body">
-                            <p class="card-text"> Here is a cool sunset in... Winter Park.</p>
+                            <p class="card-text">My Github.</p>
                         </div>
                     </div>
                 </div>
