fixed footer issue

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             </div>
         </div>
       </section>
-      
+      <footer>
       <div class="container">
         <div class="row">
-          <div class="span12">
+          <div class="col-md-12">
             <div id="footer">
               <ul class="footer">
                 <li>Website built by <a href="contact.html">Tyler Mathews</a></li>&nbsp;&nbsp;
@@ -76,6 +76,7 @@
           </div>
         </div>
       </div>
+    </footer>
     
 </body>
 </html>
