--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <p>
                       My name is Tyler Mathews, I was born in January of 1990 and currently reside in Fraser, Colorado. I currently work as a patroller at Winter Park but decided to take the summer off to focus on this new career opportunity.
                       I was born and raised in Marietta, Georgia (a suburb of Atlanta) and graduated from Kennesaw State University with a bachelors in history. I also played lacrosse through college and continue to coach at the high school level
-                      here in Fraser. In my freetime, sometimes it is hard to decdicate time to one hobby. I enjoy the outdoors so skiing, fishing, biking and hutning are at the top of the list but I also enjoy writing and playing music on string instruments
-                      and cranking up the Playstation for a chunk of time. Coding is quickly becoming another passion of mine that I lookforward to dedicating time to. 
+                      here in Fraser. In my freetime, sometimes it is hard to dedicate time to one hobby. I enjoy the outdoors so skiing, fishing, biking and hunting are at the top of the list but I also enjoy writing and playing music on string instruments
+                      and cranking up the Playstation for a chunk of time. Coding is quickly becoming another passion of mine that I look forward to exploring. 
                     </p>
                   </div>
                   <div class="col-md-3">
